--- a/TP2_infonuagique/build.xml
+++ b/TP2_infonuagique/build.xml
@@ -16,7 +16,9 @@
 		<delete dir="bin" />
 		<delete file="server.jar" />
 		<delete file="client.jar" />
-		<delete file="shared.jar" />
+		<delete file="dispatcher.jar" />
+		<delete file="calculatorServer.jar" />
+		<delete file="nameService.jar" />
 	</target>
 	<target depends="init" name="build-class">
 		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false">
@@ -28,5 +30,8 @@
 		<jar destfile="shared.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/shared/**" update="false" />
 		<jar destfile="server.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/server/**" update="false" />
 		<jar destfile="client.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/client/**" update="false" />
+		<jar destfile="dispatcher.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/dispatcher/**" update="false" />
+		<jar destfile="calculatorServer.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/calculatorServer/**" update="false" />
+		<jar destfile="nameService.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/nameService/**" update="false" />
 	</target>
 </project>
