--- a/TP2_infonuagique/build.xml
+++ b/TP2_infonuagique/build.xml
@@ -14,8 +14,7 @@
 	</target>
 	<target name="clean">
 		<delete dir="bin" />
-		<delete file="server.jar" />
-		<delete file="client.jar" />
+		<delete file="shared.jar" />
 		<delete file="dispatcher.jar" />
 		<delete file="calculatorServer.jar" />
 		<delete file="nameService.jar" />
@@ -27,11 +26,9 @@
 		</javac>
 	</target>
 	<target depends="build-class" name="build-jar">
-		<jar destfile="shared.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/shared/**" update="false" />
-		<jar destfile="server.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/server/**" update="false" />
-		<jar destfile="client.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/client/**" update="false" />
-		<jar destfile="dispatcher.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/dispatcher/**" update="false" />
-		<jar destfile="calculatorServer.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/calculatorServer/**" update="false" />
-		<jar destfile="nameService.jar" basedir="bin" includes="ca/polymtl/inf8480/tp1/nameService/**" update="false" />
+		<jar destfile="shared.jar" basedir="bin" includes="ca/polymtl/inf8480/tp2/shared/**" update="false" />
+		<jar destfile="dispatcher.jar" basedir="bin" includes="ca/polymtl/inf8480/tp2/dispatcher/**" update="false" />
+		<jar destfile="calculatorServer.jar" basedir="bin" includes="ca/polymtl/inf8480/tp2/calculatorServer/**" update="false" />
+		<jar destfile="nameService.jar" basedir="bin" includes="ca/polymtl/inf8480/tp2/nameService/**" update="false" />
 	</target>
 </project>
